[project]
name = "discord-spotify-playlist-sync"
version = "0.0.1"
description = "No one should ever use this."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "httpx>=0.28.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
lint = [
    "ruff>=0.11.8",
]
test = [
    "pytest>=8.3.5",
]
